--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-filepond": "^7.1.2",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4",
+    "tailwind-merge": "^2.6.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
