--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "filepond": "^4.30.6",
     "langchain": "^0.1.37",
+    "langsmith": "^0.2.15",
     "mongodb": "5.2.0",
     "next": "14.1.0",
     "pdf-parse": "^1.1.1",
