--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@langchain/community": "^0.0.30",
-    "@langchain/openai": "^0.0.16",
+    "@langchain/community": "^0.3.24",
+    "@langchain/core": "^0.3.30",
+    "@langchain/langgraph": "^0.2.40",
+    "@langchain/mongodb": "^0.1.0",
+    "@langchain/openai": "^0.3.17",
     "ai": "^2.2.36",
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
     "filepond": "^4.30.6",
-    "langchain": "^0.1.37",
+    "langchain": "^0.3.11",
     "langsmith": "^0.2.15",
     "mongodb": "5.2.0",
     "next": "14.1.0",
+    "openai": "^4.78.1",
     "pdf-parse": "^1.1.1",
     "pdf2json": "^3.0.5",
     "pdfjs-dist": "^4.0.379",
