--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@langchain/langgraph": "^0.2.40",
     "@langchain/mongodb": "^0.1.0",
     "@langchain/openai": "^0.3.17",
+    "@redis/client": "^1.6.0",
     "ai": "^2.2.36",
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
@@ -32,6 +33,7 @@
     "react-filepond": "^7.1.2",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4",
+    "redis": "^4.7.0",
     "tailwind-merge": "^2.6.0",
     "uuid": "^9.0.1"
   },
