Assistant checkpoint: Update upload route to use Pinecone vector store
Assistant generated file changes:
- src/app/api/upload/route.ts: Update upload route to use Pinecone

---

User prompt:

update the upload/route.ts to use pinecone vector storage to upload documents to index named zeno - PINECONE_API_KEY is in secrets

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@langchain/langgraph": "^0.2.40",
     "@langchain/mongodb": "^0.1.0",
     "@langchain/openai": "^0.3.17",
+    "@pinecone-database/pinecone": "^4.1.0",
     "@redis/client": "^1.6.0",
     "ai": "^2.2.36",
     "axios": "^1.6.7",
